Fixed carousel margins on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -162,6 +162,9 @@ body {
         height: 100px;
         width: 100px;
     }
+	#container-carousel {
+		margin-bottom: 10px;
+	}
 }
 
 
